Week 5 Homework 1 / Refactoring

--- a/src/kodlama.io.devs/WebAPI/appsettings.json
+++ b/src/kodlama.io.devs/WebAPI/appsettings.json
@@ -3,7 +3,8 @@
     "Audience": "merve@merve.com",
     "Issuer": "merve@merve.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey": "mysecretsecuritykeymysecretsecuritykey"
+    "SecurityKey": "mysecretsecuritykeymysecretsecuritykey",
+    "RefreshTokenTTL": 2
   },
   "Logging": {
     "LogLevel": {
